<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circular_std_bold"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/circular_std_medium"
        android:gravity="center"
        android:text="@string/live_a_new_experience_while_shopping"
        android:textColor="@color/light_grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="241dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_undraw_successful_purchase_uyin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/ButtonCircleShape"
        android:layout_width="255dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/circular_std_medium"
        android:text="@string/login"
        android:textColor="@color/dark_yellow"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/singUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/singUpBtn"
        style="@style/ButtonCircleShape"
        android:layout_width="255dp"
        android:layout_height="55dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/light_yellow"
        android:fontFamily="@font/circular_std_medium"
        android:text="@string/singup"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>