<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/circular_std_bold"
        android:text="@string/personalize"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/circular_std_medium"
        android:text="@string/this_will_improve_your_recommendation_results"
        android:textColor="@color/light_grey"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:contentDescription="@string/description"
        android:src="@drawable/ic_arrow_back_black_36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/circular_std_medium"
        android:text="@string/age"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/circular_std_medium"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Spinner
        android:id="@+id/spinnerAge"
        android:layout_width="126dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_group_67"
        android:entries="@array/age"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="198dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_rectangle_20"
        android:entries="@array/gender"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/spinnerAge"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/circular_std_medium"
        android:text="@string/sizes_for_shirts"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAge" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonCircleShape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_ellipse_25"
                android:fontFamily="@font/circular_std_medium"
                android:text="@string/xs"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                style="@style/ButtonCircleShape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_ellipse_25"
                android:fontFamily="@font/circular_std_medium"
                android:text="@string/s"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                style="@style/ButtonCircleShape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_ellipse_25"
                android:fontFamily="@font/circular_std_medium"
                android:text="@string/m"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                style="@style/ButtonCircleShape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_ellipse_25"
                android:fontFamily="@font/circular_std_medium"
                android:text="@string/l"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                style="@style/ButtonCircleShape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_ellipse_25"
                android:fontFamily="@font/circular_std_medium"
                android:text="@string/xl"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </HorizontalScrollView>


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/circular_std_medium"
        android:text="@string/sizes_for_trousers"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <Button
                style="@style/ButtonCircleShape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_ellipse_25"
                android:fontFamily="@font/circular_std_medium"
                android:text="@string/xs"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                style="@style/ButtonCircleShape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_ellipse_25"
                android:fontFamily="@font/circular_std_medium"
                android:text="@string/s"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                style="@style/ButtonCircleShape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_ellipse_25"
                android:fontFamily="@font/circular_std_medium"
                android:text="@string/m"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                style="@style/ButtonCircleShape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_ellipse_25"
                android:fontFamily="@font/circular_std_medium"
                android:text="@string/l"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Button
                style="@style/ButtonCircleShape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_ellipse_25"
                android:fontFamily="@font/circular_std_medium"
                android:text="@string/xl"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/circular_std_medium"
        android:text="@string/skip_for_now"
        android:textColor="@color/dark_yellow"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/ButtonCircleShape"
        android:layout_width="255dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/dark_yellow"
        android:fontFamily="@font/circular_std_medium"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:layout_marginTop="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>